Astro tailwind upgrade

--- a/cms/astro/src/layouts/BaseLayout.astro
+++ b/cms/astro/src/layouts/BaseLayout.astro
@@ -56,7 +56,7 @@ const fullTitle = metadata?.title ? `${metadata.title} | ${siteTitle}` : siteTit
       globals={globals}
       client:load
     >
-      <main class="flex-grow">
+      <main class="grow">
         <slot />
       </main>
     </VisualEditingLayout>
